@startuml

class UserRepository {
    + EventRepository getInstance()
}

class HabitRepository {
    + EventRepository getInstance()
}

class EventRepository {
    + EventRepository getInstance()
}

class User {
    +<<get/set>> String id
    +<<get/set>> String email
    +<<get/set>> List<String> habits
}

class Habit {
    +<<get/set>> String id
    +<<get/set>> String title
    +<<get/set>> String reason
    +<<get/set>> Date startDate
    +<<get/set>> Occurrence occurrence
    +<<get/set>> List<String> events
    +<<get/set>> boolean shared
}

class Event {
    +<<get/set>> String id
    +<<get/set>> Date date
    +<<get/set>> String comment
    +<<get/set>> String photoPath
    +<<get/set>> GeoPoint location
}

class Occurrence {
    +<<get/set>> boolean onSunday
    +<<get/set>> boolean onMonday
    +<<get/set>> boolean onTuesday
    +<<get/set>> boolean onWednesday
    +<<get/set>> boolean onThursday
    +<<get/set>> boolean onFriday
    +<<get/set>> boolean onSaturday
}

UserRepository "1" -- "0..*" User
HabitRepository "1" -- "0..*" Habit
EventRepository "1" -- "0..*" Event

User "1" *- "0..*" Habit : \t
Habit "1" *- "0..*" Event : \t

Habit "1" *-- "1" Occurrence

@enduml